<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/demo_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="48dp">

          <com.ksug.speedmatch.view.StartCustomCardView
              android:id="@+id/ccv_option"
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:layout_gravity="end"
              custom:top="@drawable/different_circle"
              custom:bottomLeft="@drawable/normal_circle"
              custom:bottomRight="@drawable/normal_circle"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/demo_container"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_container"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_score"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp" />

            <TextView
                android:id="@+id/tv_high_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10303"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="10303" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="58"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maximum_cards"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp" />

            <TextView
                android:id="@+id/tv_max_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="34 Cards"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="34 Cards" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_last_game_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_container"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:text="You scored 123456 (99 cards)\n\nGame Over!" />

    <LinearLayout
        android:id="@+id/cta_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_copyright"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cta_info"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/ic_info" />

        <Button
            android:id="@+id/cta_start_game"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/cta_play_game"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <include layout="@layout/view_copyright" />

</RelativeLayout>
