<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.GameActivity">

    <TextView
        android:id="@+id/tv_bonus_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:text="+5" />

    <RelativeLayout
        android:id="@+id/score_timer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/cta_restart"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:alpha="0.9"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/ic_restart" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:background="@color/colorlightTransperant"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:text="@string/time_text"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_game_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:text="0:45" />

            <View
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:text="@string/score_text"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="000000"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_bonus_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/score_timer_container"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:text="+500" />

    <LinearLayout
        android:id="@+id/question_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/demo_container"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <FrameLayout
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:layout_gravity="center"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="35dp">
            <com.ksug.speedmatch.view.CustomCardView
                android:id="@+id/ccv_opt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                custom:bottomLeft="@drawable/normal_circle"
                custom:bottomRight="@drawable/normal_circle"
                custom:top="@drawable/different_circle"
                android:lines="1"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circular_view"
                android:gravity="center"
                android:layout_gravity="center|top"
                android:text="3"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/img_answer_notification"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:gravity="top"
                android:layout_gravity="top|center"
                android:src="@drawable/ic_correct"
                android:visibility="visible" />
        </FrameLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/game_description"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/answer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/cta_no"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_weight="50"
            android:background="@drawable/option_button_color"
            android:padding="8dp"
            android:text="@string/cta_no"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cta_yes"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_weight="50"
            android:background="@drawable/option_button_color"
            android:padding="8dp"
            android:text="@string/cta_yes"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
